--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,11 @@ h2 {
 }
 
 .experience-card {
-    margin: 3rem 0;
+    margin: 2rem auto;
+    padding: 2rem;
+    box-shadow: 5px 5px 20px #f2f6f7;
+    border-radius: 10%;
+    max-width: 70%;
 }
 
 .nav-narrow {
@@ -109,17 +113,27 @@ h2 {
     margin-bottom: 1rem;
 }
 
-.skill-title {
-    /* margin-bottom: 1rem; */
-}
-
-.skills-col-body {
-    /* margin: auto auto; */
-}
-
 .card-img-top {
     border-radius: 10%;
     object-fit: cover;
     width: 250px;
     height: 100%;
+}
+
+.content {
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.3s;
+}
+
+.project-card {
+    border-radius: 20%;
+    padding: 2rem 2rem 0;
+    background-color: none;
+    transition: background-color 0.3s;
+    box-shadow: 0px 5px 20px #efefef;
+}
+
+.stack-info {
+    font-weight: 300;
 }
