--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ h2 {
 #nav-main {
     left: 0;
     right: 0;
-    background: white;
+    background: linear-gradient(0deg, rgba(2,0,36,0) 0%, rgba(255,255,255,1) 20%);
     z-index: 100;
 }
 
