--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,13 @@ h2 {
     padding: 2rem;
     box-shadow: 5px 5px 20px #f2f6f7;
     border-radius: 10%;
-    max-width: 70%;
+    max-width: 85%;
+}
+
+@media (max-width: 776px) {
+    .experience-card {
+        max-width: 96%;
+    }
 }
 
 .nav-narrow {
@@ -153,7 +159,7 @@ h2 {
     height: 100%;
 }
 
-.content {
+.collapsible-content {
     overflow: hidden;
     max-height: 0;
     transition: max-height 0.3s;
