--- a/css/styles.css
+++ b/css/styles.css
@@ -1,178 +1,214 @@
 body {
-    text-align: center;
+  text-align: center;
 }
 
 section {
-    margin: 4rem 0;
+  margin: 4rem 0;
 }
 
 hr {
-    height: 0;
-    border-color: #d6e0f0;
-    border-style: none dotted none none;
-    border-width: 6px;
-    height: 3rem;
-    width: 0%;
-  }
-
-#title {
-    margin: 1rem 0;
+  height: 0;
+  border-color: #d6e0f0;
+  border-style: none dotted none none;
+  border-width: 6px;
+  height: 3rem;
+  width: 0%;
 }
 
-h1, h2, h3, h4 {
-    font-family: "Montserrat";
+#title {
+  padding: 0;
+  margin: 0rem 0;
+  background-color: white;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Montserrat";
 }
 
 h1 {
-    font-weight: 700;
-    font-size: 3.5rem;
+  font-weight: 700;
+  font-size: 3.5rem;
 }
 
 h2 {
-    font-size: 2.8rem;
-    margin: 2rem 0;
+  font-size: 2.8rem;
+  margin: 2rem 0;
 }
 
 .sticky {
-    position: fixed;
-    top: 0;
-    width: 100%;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .content {
-    padding: 16px;
+  padding: 16px;
 }
 .sticky + .content {
-    padding-top: 60px;
-  }
+  padding-top: 60px;
+}
 
 #nav-main {
-    left: 0;
-    right: 0;
-    background: linear-gradient(0deg, rgba(2,0,36,0) 0%, rgba(255,255,255,1) 20%);
-    z-index: 100;
+  left: 0;
+  right: 0;
+  background: -webkit-linear-gradient(
+    top,
+    white,
+    white 70%,
+    rgba(255, 255, 255, 0)
+  );
+  z-index: 100;
+}
+
+.btn-dark:hover {
+  background-color: black;
+  border-color: gray;
+  box-shadow: 1px 1px 20px rgb(172, 172, 172);
+}
+
+.logo {
+  width: 100px;
+}
+
+.btn-dark {
+  background-color: rgb(53, 53, 53);
+  border-radius: 8px;
 }
 
 .nav-link {
-    padding: .4rem .5rem;
+  padding: 0.4rem 0.5rem;
 }
 
 .nav-pad {
-    padding-top: 1rem;
-    padding-bottom: 2rem;
+  padding-top: 3px;
+  padding-bottom: 2rem;
 }
 
 .extra-pad {
-    padding-top: 90px;
+  padding-top: 135px;
 }
 
 .position-company {
-    display: inline-block;
+  display: inline-block;
 }
 
 .company {
-    font-weight: 700;
-    font-size: 1.5rem;
+  font-weight: 700;
+  font-size: 1.5rem;
 }
 
 .position {
-    font-style: italic;
+  font-style: italic;
 }
 
 .position-company p {
-    display: inline-block;
+  display: inline-block;
 }
 
 .location {
-    font-weight: 200;
+  font-weight: 200;
 }
 
 .period {
-    font-family: "Montserrat";
-    font-weight: 600;
+  font-family: "Montserrat";
+  font-weight: 600;
 }
 
 .experience-head {
-    margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .experience-head p {
-    margin: 0;
-} 
+  margin: 0;
+}
 
 .experience-body {
-    margin: 1.5rem 0;
+  margin: 1.5rem 0;
 }
 
 .experience-card {
-    margin: 2rem auto;
-    padding: 2rem;
-    box-shadow: 5px 5px 20px #f2f6f7;
-    border-radius: 10%;
-    max-width: 85%;
+  margin: 2rem auto;
+  padding: 2rem;
+  box-shadow: 5px 5px 20px #d3e3e8;
+  border-radius: 10%;
+  max-width: 85%;
 }
 
 @media (max-width: 776px) {
-    .experience-card {
-        max-width: 96%;
-    }
+  .experience-card {
+    max-width: 96%;
+  }
 }
 
 .nav-narrow {
-    display: none;
+  display: none;
 }
 
-@media (max-width: 575.98px) {
-    .nav-wide {   
-        display: none;
-    }
+.nav-wide {
+  padding-left: 100px;
+  padding-right: 100px;
+}
 
-    .nav-narrow {
-        display: block;
-    }
+@media (max-width: 1000px) {
+  .nav-wide {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media (max-width: 625px) {
+  .nav-wide {
+    display: none;
+  }
+
+  .nav-narrow {
+    display: block;
+  }
 }
 
 .section-container {
-    padding-top: 72px;
+  padding-top: 72px;
 }
 
 .skill-card {
-    padding: 0.5rem 0.7rem;
-    margin: auto ;
-    /* background: red; */
+  padding: 0.5rem 0.7rem;
+  margin: auto;
+  /* background: red; */
 }
 
-
 .skill-section {
-    padding: 0.7rem 2.7rem;
-    margin: 1.5rem 0;
+  padding: 0.7rem 2.7rem;
+  margin: 1.5rem 0;
 }
 
 .skill-section h3 {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .card-img-top {
-    border-radius: 10%;
-    object-fit: cover;
-    width: 250px;
-    height: 100%;
+  border-radius: 10%;
+  object-fit: cover;
+  width: 250px;
+  height: 100%;
 }
 
 .collapsible-content {
-    overflow: hidden;
-    max-height: 0;
-    transition: max-height 0.3s;
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.3s;
 }
 
 .project-card {
-    border-radius: 20%;
-    padding: 2rem 2rem 0;
-    background-color: none;
-    transition: background-color 0.3s;
-    box-shadow: 0px 5px 20px #efefef;
+  border-radius: 30px;
+  padding: 2rem 0rem 0;
+  background-color: none;
+  transition: background-color 0.3s;
+  box-shadow: 0px 5px 20px #c1d0d5;
 }
 
 .stack-info {
-    font-weight: 300;
+  font-weight: 300;
 }
