--- a/css/styles.css
+++ b/css/styles.css
@@ -16,26 +16,58 @@ hr {
 }
 
 #title {
-  padding: 0;
+  padding-top: 20px;
   margin: 0rem 0;
-  background-color: white;
+  color: white;
+}
+
+#experience {
+  margin-top: 150px;
+}
+
+#nav-main {
+  left: 0;
+  right: 0;
+  /* background: -webkit-linear-gradient(
+    top,
+    white,
+    white 70%,
+    rgba(255, 255, 255, 0)
+  ); */
+  z-index: 100;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  font-family: "Montserrat";
+  font-family: "Bebas Neue", cursive;
 }
 
 h1 {
   font-weight: 700;
-  font-size: 3.5rem;
+  font-size: 5.5rem;
 }
 
 h2 {
-  font-size: 2.8rem;
+  font-size: 3.8rem;
   margin: 2rem 0;
+}
+
+.abso {
+  position: absolute;
+}
+
+.test {
+  background-image: linear-gradient(
+    176deg,
+    rgb(144, 238, 144) 70%,
+    transparent 10%
+  );
+}
+
+.blurb {
+  padding-bottom: 70px;
 }
 
 .sticky {
@@ -51,32 +83,42 @@ h2 {
   padding-top: 60px;
 }
 
-#nav-main {
-  left: 0;
-  right: 0;
-  background: -webkit-linear-gradient(
-    top,
-    white,
-    white 70%,
-    rgba(255, 255, 255, 0)
-  );
-  z-index: 100;
-}
-
 .btn-dark:hover {
   background-color: black;
-  border-color: gray;
-  box-shadow: 1px 1px 20px rgb(172, 172, 172);
+  border-color: black;
+  box-shadow: 1px 1px 20px rgb(250, 250, 250);
 }
 
-.logo {
+.logo-black {
+  width: 100px;
+  max-width: 100px;
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+}
+
+.logo-white {
   width: 100px;
   max-width: 100px;
 }
 
 .btn-dark {
-  background-color: rgb(53, 53, 53);
+  background-color: rgb(96, 96, 96);
+  border-color: rgb(96, 96, 96);
   border-radius: 8px;
+}
+.nav-bg {
+  position: absolute;
+  background: -webkit-linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 1) 70%,
+    rgba(255, 255, 255, 1) 100%
+  );
+  opacity: 0.3;
+  width: 100%;
+  height: 200px;
 }
 
 .nav-link {
@@ -111,6 +153,10 @@ h2 {
 
 .location {
   font-weight: 200;
+}
+
+.header {
+  height: 450px;
 }
 
 .period {
