--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
   text-align: center;
+  background-color: rgb(242, 250, 244);
 }
 
 section {
@@ -67,7 +68,7 @@ h2 {
 }
 
 .blurb {
-  padding-bottom: 70px;
+  padding-bottom: 50px;
 }
 
 .sticky {
@@ -83,9 +84,15 @@ h2 {
   padding-top: 60px;
 }
 
+.btn-dark {
+  background-color: rgb(89, 193, 105);
+  border-color: rgb(89, 193, 105);
+  border-radius: 8px;
+}
+
 .btn-dark:hover {
-  background-color: black;
-  border-color: black;
+  background-color: rgb(63, 155, 77);
+  border-color: rgb(63, 155, 77);
   box-shadow: 1px 1px 20px rgb(250, 250, 250);
 }
 
@@ -96,6 +103,7 @@ h2 {
   margin: auto;
   left: 0;
   right: 0;
+  opacity: 0;
 }
 
 .logo-white {
@@ -103,11 +111,6 @@ h2 {
   max-width: 100px;
 }
 
-.btn-dark {
-  background-color: rgb(96, 96, 96);
-  border-color: rgb(96, 96, 96);
-  border-radius: 8px;
-}
 .nav-bg {
   position: absolute;
   background: -webkit-linear-gradient(
@@ -116,7 +119,7 @@ h2 {
     rgba(255, 255, 255, 1) 70%,
     rgba(255, 255, 255, 1) 100%
   );
-  opacity: 0.3;
+  opacity: 0;
   width: 100%;
   height: 200px;
 }
@@ -182,6 +185,7 @@ h2 {
   box-shadow: 5px 5px 20px #d3e3e8;
   border-radius: 10%;
   max-width: 85%;
+  background-color: white;
 }
 
 @media (max-width: 776px) {
@@ -251,7 +255,7 @@ h2 {
 .project-card {
   border-radius: 30px;
   padding: 2rem 0rem 0;
-  background-color: none;
+  background-color: white;
   transition: background-color 0.3s;
   box-shadow: 0px 5px 20px #c1d0d5;
 }
