--- a/css/styles.css
+++ b/css/styles.css
@@ -48,11 +48,16 @@ h4 {
 h1 {
   font-weight: 700;
   font-size: 5.5rem;
+  margin-bottom: 0;
 }
 
 h2 {
   font-size: 3.8rem;
   margin: 2rem 0;
+}
+
+.social {
+
 }
 
 .abso {
